Fix FAQ spacing, match toggle color to navbar, reorder Trauzeugen

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -20,10 +20,6 @@ dd p:empty {
   display: none;
 }
 
-dd p {
-  margin-bottom: 2rem;
-}
-
 .billboard {
   height: 360px;
 }
